tests/errors/type_casting_01.f90
program type_casting_01
    implicit none
    logical :: x(3) = [1, 1, 0]
    print *, x
end program
